# ginny

./: README.md  pyproject.toml
.streamlit/: config.toml
app/: app.py  plots.py  populate_db.py  refresh_db.py  requirements.txt  test.py  test_mongodb.py  test_sheetsdb.py
