[tool.poetry]
name = "ginny"
version = "0.1.0"
description = ""
authors = ["Pauline Hidalgo <Pauline.Hidalgo@jhuapl.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.12.2"
pandas = "^1.4.3"
pymongo = {extras = ["srv"], version = "^4.2.0"}
matplotlib = "^3.5.3"
plotly = "^5.10.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
